# stingray

api/: .flake8  Makefile  pyproject.toml
api/stingray/: __init__.py  app.py  main.py
api/stingray/common/: __init__.py  settings.py
