[tool.poetry]
name = "stingray"
version = "0.1.0"
description = "Stingray API server"
authors = ["Aragorn Dai <tzjie.dai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
