[tool.poetry]
name = "stingray"
version = "0.1.0"
description = "Stingray API server"
authors = ["Aragorn Dai <tzjie.dai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
pydantic = "^1.10.2"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
line_length = 120
profile = "black"
